--- a/style/index.css
+++ b/style/index.css
@@ -1,26 +1,128 @@
 /* ensure all pages have Bootstrap CSS */
 @import '~bootstrap/dist/css/bootstrap.min.css';
 
-.md-container {
-  max-width: 800px;
-  padding-top: 2rem;
+@keyframes spinner-border {
+  to { transform: rotate(360deg); }
+} 
+.spinner-border{
+    display: inline-block;
+    width: 2rem;
+    height: 2rem;
+    vertical-align: text-bottom;
+    border: .25em solid currentColor;
+    border-right-color: transparent;
+    border-radius: 50%;
+    -webkit-animation: spinner-border .75s linear infinite;
+    animation: spinner-border .75s linear infinite;
+}
+.spinner-border-sm{
+    height: 1rem;
+    border-width: .2em;
 }
 
-.sml-card {
-  width: 22rem;
-  margin: 1rem 0;
+:root {
+  font-size: 14px;
 }
 
-.cntr-footer {
-  height: 80px;
-  margin-top: 20px;
+body {
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  right: 0;
+  left: 0;
+  padding: 2rem;
+  padding-top: 0.5rem;
+}
+
+@media (max-width: 760px) {
+  body {
+      padding: 0;
+      padding-top: 0.25rem;
+  }
+}
+
+main {
+  height: 100%;
+  width: 100%;
+}
+
+.center {
+  width: 100%;
   display: flex;
-  align-items: center;
   justify-content: center;
-  border-top: 1px solid #ccc;
+  align-items: center;
+  flex-direction: column;
 }
 
-.sml-logo {
-  height: 1em;
-  margin-left: 10px;
+.form-section {
+  border-radius: 6px;
+  overflow: hidden;
+  object-fit: contain;
+}
+
+.slider {
+  overflow: hidden;
+}
+
+.hidden {
+  visibility: hidden;
+}
+
+.visible {
+  visibility: visible;
+}
+
+.slide-up {
+  animation: 0.26s ease-in-out slideUp;
+  transform-origin: top;
+  padding: 0rem;
+  max-height: 0rem;
+}
+
+.slide-down {
+  animation: 0.26s ease-in-out slideDown;
+  transform-origin: top;
+  max-height: 70rem;
+  padding: 1.25rem;
+}
+
+.avatar {
+  vertical-align: middle;
+  width: 50px;
+  height: 50px;
+  border-radius: 50%;
+}
+
+.card-body {
+  min-height: 0;
+}
+
+.react-datepicker-wrapper {
+  width: 100%;
+}
+
+.w-full {
+  width: 100%;
+}
+
+@keyframes slideUp {
+  from {
+      max-height: 70rem;
+      padding: 1.25rem;
+  }
+  to {
+      max-height: 0rem;
+      padding: 0rem;
+  }
+}
+
+@keyframes slideDown {
+  from {
+      max-height: 0rem;
+      padding: 0rem;
+  }
+  to {
+      max-height: 70rem;
+      padding: 1.25rem;
+  }
 }
